@@ -197,6 +197,7 @@ SOURCES = src/main.c \
 	src/strmap.c \
 	src/dhashmap.c \
 	src/cache.c \
+	src/istream-unlock.c \
 	src/http-cache.c \
 	src/fcache.c \
 	src/stock.c \
@@ -314,7 +315,7 @@ check-widget-stream: test/t-widget-stream
 test/t-http-util: test/t-http-util.o src/http-util.o src/pool.o src/pstring.o src/strutil.o
 	$(CC) -o $@ $^ $(LDFLAGS) $(LIBDAEMON_LIBS)
 
-test/t-http-cache: test/t-http-cache.o src/pool.o src/pstring.o src/tpool.o src/strmap.o src/hashmap.o src/fifo-buffer.o src/http.o src/header-parser.o src/growing-buffer.o src/strutil.o src/istream-memory.o src/istream-string.o src/http-cache.o src/abort-unref.o src/cache.o src/header-writer.o src/http-util.o src/istream-tee.o src/date.o src/gmtime.o src/istream-null.o
+test/t-http-cache: test/t-http-cache.o src/pool.o src/pstring.o src/tpool.o src/strmap.o src/hashmap.o src/fifo-buffer.o src/http.o src/header-parser.o src/growing-buffer.o src/strutil.o src/istream-memory.o src/istream-string.o src/http-cache.o src/abort-unref.o src/cache.o src/header-writer.o src/http-util.o src/istream-tee.o src/date.o src/gmtime.o src/istream-null.o src/istream-unlock.o src/istream-forward.o
 	$(CC) -o $@ $^ $(LDFLAGS) $(LIBDAEMON_LIBS) $(LIBEVENT_LIBS)
 
 test/t-processor: test/t-processor.o src/processor.o src/penv.o src/parser.o src/istream-replace.o src/widget.o src/widget-ref.o src/uri-relative.o src/uri-parser.o src/uri-escape.o src/strmap.o src/hashmap.o src/growing-buffer.o src/fifo-buffer.o src/pool.o src/pstring.o src/tpool.o src/istream-string.o src/istream-subst.o src/istream-file.o src/istream-cat.o src/istream-memory.o src/istream-delayed.o src/istream-hold.o src/istream-dechunk.o src/istream-chunked.o src/header-writer.o src/args.o src/buffered-io.o src/tcp-stock.o src/stock.o src/hstock.o src/client-socket.o src/socket-util.o src/fd-util.o src/format.o src/header-parser.o src/http.o src/strutil.o src/widget-request.o src/istream-tee.o src/istream-null.o src/event2.o src/failure.o src/uri-address.o src/shm.o src/dpool.o src/dstring.o src/dhashmap.o src/widget-stream.o src/expansible-buffer.o src/istream-forward.o src/istream-catch.o
