@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.5.4) unstable; urgency=low
   * deprecated c:mode=proxy
   * rewrite-uri: always enable focus in mode=partial
   * http-cache: don't cache resources with query string (RFC 2616 13.9)
+  * http-cache: lock cache items while they are served
 
  --
 
